Profile layout fix
fixed profile layout. The profile card was uneven with the rest in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -700,10 +700,6 @@ video {
   margin-right: 0.25rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
-}
-
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -845,14 +841,6 @@ video {
   width: 100vw;
 }
 
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
 .min-w-\[80\%\] {
   min-width: 80%;
 }
@@ -872,14 +860,6 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-\[60px\] {
-  max-width: 60px;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 
 .origin-bottom-right {
@@ -1008,10 +988,6 @@ video {
 
 .whitespace-normal {
   white-space: normal;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 
 .break-words {
@@ -1210,9 +1186,9 @@ video {
   padding: 2rem;
 }
 
-.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .px-2 {
@@ -1260,21 +1236,12 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .pb-12 {
   padding-bottom: 3rem;
 }
 
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
 }
 
 .pr-1 {
@@ -1287,10 +1254,6 @@ video {
 
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
 }
 
 .text-center {
@@ -1665,6 +1628,10 @@ video {
     margin-left: 2.5rem;
   }
 
+  .sm\:mr-8 {
+    margin-right: 2rem;
+  }
+
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -1736,13 +1703,5 @@ video {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:whitespace-normal {
-    white-space: normal;
-  }
-
-  .md\:break-words {
-    overflow-wrap: break-word;
   }
 }
